--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "preview": "vite preview"
   },
   "author": "Ritwik Satpati",
-  "license": "ISC",  
+  "license": "ISC",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@reduxjs/toolkit": "^2.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
